--- a/package.json
+++ b/package.json
@@ -12,11 +12,19 @@
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@xstate/react": "^3.0.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "nanoid": "^4.0.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "reactflow": "^11.3.3",
+    "styled-components": "^5.3.6",
+    "typescript": "4.9.4",
+    "xstate": "^4.35.0"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
